--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@ethereumjs/common": "^2.3.1",
     "@ethereumjs/tx": "^3.2.1",
     "@keystonehq/metamask-airgapped-keyring": "^0.3.0",
+    "@ledgerhq/hw-transport": "^6.24.1",
     "@ledgerhq/metamask-keyring": "0.3.1",
     "@metamask/contract-metadata": "^1.34.0",
     "@metamask/metamask-eth-abis": "3.0.0",
@@ -73,7 +74,7 @@
     "@keystonehq/bc-ur-registry-eth": "^0.9.0",
     "@lavamoat/allow-scripts": "^2.0.2",
     "@ledgerhq/hw-transport": "^6.24.1",
-    "@metamask/auto-changelog": "^2.5.0",
+    "@metamask/auto-changelog": "^2.6.0",
     "@metamask/create-release-branch": "^1.0.1",
     "@metamask/eslint-config": "^9.0.0",
     "@metamask/eslint-config-jest": "^9.0.0",
