--- a/packages/controller-utils/package/package.json
+++ b/packages/controller-utils/package/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "@metamask/rate-limit-controller",
-  "version": "1.0.0",
-  "description": "Contains logic for rate-limiting API endpoints by requesting origin",
+  "name": "@metamask/controller-utils",
+  "version": "0.0.0",
+  "description": "Data and convenience functions shared by multiple packages",
   "keywords": [
     "MetaMask",
     "Ethereum"
   ],
-  "homepage": "https://github.com/MetaMask/controllers/tree/main/packages/rate-limit-controller#readme",
+  "homepage": "https://github.com/MetaMask/controllers/tree/main/packages/controller-utils#readme",
   "bugs": {
     "url": "https://github.com/MetaMask/controllers/issues"
   },
@@ -22,22 +22,26 @@
   ],
   "scripts": {
     "build:docs": "typedoc",
-    "changelog:validate": "../../scripts/validate-changelog.sh @metamask/rate-limit-controller",
-    "prepare-manifest:preview": "../../scripts/prepare-preview-manifest.sh",
-    "publish:preview": "yarn npm publish --tag preview",
+    "changelog:validate": "../../scripts/validate-changelog.sh @metamask/controller-utils",
     "test": "jest",
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@metamask/base-controller": "workspace:~",
+    "@metamask/base-controller": "../base-controller/package.tgz",
+    "eth-ens-namehash": "^2.0.8",
     "eth-rpc-errors": "^4.0.0",
-    "immer": "^9.0.6"
+    "ethereumjs-util": "^7.0.10",
+    "ethjs-unit": "^0.1.6",
+    "fast-deep-equal": "^3.1.3",
+    "isomorphic-fetch": "^3.0.0"
   },
   "devDependencies": {
-    "@metamask/auto-changelog": "^3.1.0",
+    "@metamask/auto-changelog": "^3.0.0",
     "@types/jest": "^26.0.22",
+    "abort-controller": "^3.0.0",
     "deepmerge": "^4.2.2",
     "jest": "^26.4.2",
+    "nock": "^13.0.7",
     "ts-jest": "^26.5.2",
     "typedoc": "^0.22.15",
     "typedoc-plugin-missing-exports": "^0.22.6",
