--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "lint:misc": "prettier '**/*.json' '**/*.md' '!**/CHANGELOG.md' '!**/CHANGELOG.old.md' '**/*.yml' '!.yarnrc.yml' --ignore-path .gitignore",
     "prepack": "./scripts/prepack.sh",
     "publish-previews": "yarn workspaces foreach --parallel run publish-preview",
-    "set-preview-versions": "yarn workspaces foreach --parallel run set-prerelease-version \"$(git rev-parse --short HEAD)\"",
+    "prepare-preview-builds": "yarn workspaces foreach --parallel run prepare-preview-build",
     "setup": "yarn install",
     "test": "yarn workspaces foreach --parallel --verbose run test"
   },
