--- a/.github/workflows/publish-preview.yml
+++ b/.github/workflows/publish-preview.yml
@@ -5,15 +5,27 @@ on:
     types: created
 
 jobs:
-  publish-preview:
-    permissions:
-      contents: write
+  is-fork-pull-request:
+    name: Determine whether this issue comment was on a pull request from a fork
     if: ${{ github.event.issue.pull_request && startsWith(github.event.comment.body, '@metamaskbot publish-preview') }}
     runs-on: ubuntu-latest
+    outputs:
+      IS_FORK: ${{ steps.is-release.outputs.IS_FORK }}
     steps:
-      - uses: actions/checkout@v3
-        with:
-          ref: ${{ github.sha }}
+      - name: Determine whether this PR is from a fork
+        run: echo "IS_FORK=$(gh pr view --json isCrossRepository --jq '.isCrossRepository' {{ github.event.issue.number }} )"
+
+  publish-preview:
+    name: Publish build preview
+    needs: is-fork-pull-request
+    permissions:
+      contents: write
+    # This ensures we don't publish on forks. We can't trust forks with this token.
+    if: ${{ needs.is-fork-pull-request.outputs.IS_FORK == 'false' }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout pull request
+        run: hub pr checkout ${{ github.event.issue.number }}
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
