--- a/.github/workflows/publish-preview.yml
+++ b/.github/workflows/publish-preview.yml
@@ -31,7 +31,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Checkout pull request
-        run: hub pr checkout "${PR_NUMBER}"
+        run: gh pr checkout "${PR_NUMBER}"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           PR_NUMBER: ${{ github.event.issue.number }}
@@ -53,7 +53,7 @@ jobs:
         env:
           YARN_NPM_AUTH_TOKEN: ${{ secrets.PUBLISH_PREVIEW_NPM_TOKEN }}
       - name: Post build preview in comment
-        run: hub pr comment "${PR_NUMBER}" -b "Packages published as '[current-version]-${COMMIT_SHA}'"
+        run: gh pr comment "${PR_NUMBER}" -b "Packages published as '[current-version]-${COMMIT_SHA}'"
         env:
           COMMIT_SHA: ${{ steps.commit-sha.outputs.COMMIT_SHA }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
