Make controller-utils the trunk
Currently, `controller-utils` depends on `base-controller` (in order to
access the `Json` type). This seems wrong. Despite its imperfect name,
`controller-utils` holds code that needs to be shared across the whole
monorepo, so it should be the thing that everything depends on. This
commit fixes that.

--- a/packages/base-controller/tsconfig.build.json
+++ b/packages/base-controller/tsconfig.build.json
@@ -5,5 +5,10 @@
     "outDir": "./dist",
     "rootDir": "./src"
   },
+  "references": [
+    {
+      "path": "../controller-utils/tsconfig.build.json"
+    }
+  ],
   "include": ["../../types", "./src"]
 }
