--- a/packages/base-controller/tsconfig.json
+++ b/packages/base-controller/tsconfig.json
@@ -3,5 +3,10 @@
   "compilerOptions": {
     "baseUrl": "./"
   },
+  "references": [
+    {
+      "path": "../controller-utils"
+    }
+  ],
   "include": ["../../types", "./src"]
 }
