--- a/packages/approval-controller/package.json
+++ b/packages/approval-controller/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "@metamask/base-controller": "workspace:~",
+    "@metamask/controller-utils": "workspace:~",
     "eth-rpc-errors": "^4.0.0",
     "immer": "^9.0.6",
     "nanoid": "^3.1.31"
