--- a/packages/approval-controller/tsconfig.build.json
+++ b/packages/approval-controller/tsconfig.build.json
@@ -5,6 +5,13 @@
     "outDir": "./dist",
     "rootDir": "./src"
   },
-  "references": [{ "path": "../base-controller/tsconfig.build.json" }],
+  "references": [
+    {
+      "path": "../base-controller/tsconfig.build.json"
+    },
+    {
+      "path": "../controller-utils/tsconfig.build.json"
+    }
+  ],
   "include": ["../../types", "./src"]
 }
