--- a/packages/subject-metadata-controller/tsconfig.build.json
+++ b/packages/subject-metadata-controller/tsconfig.build.json
@@ -6,8 +6,15 @@
     "rootDir": "./src"
   },
   "references": [
-    { "path": "../base-controller/tsconfig.build.json" },
-    { "path": "../permission-controller/tsconfig.build.json" }
+    {
+      "path": "../base-controller/tsconfig.build.json"
+    },
+    {
+      "path": "../controller-utils/tsconfig.build.json"
+    },
+    {
+      "path": "../permission-controller/tsconfig.build.json"
+    }
   ],
   "include": ["../../types", "./src"]
 }
