--- a/packages/subject-metadata-controller/tsconfig.json
+++ b/packages/subject-metadata-controller/tsconfig.json
@@ -4,8 +4,15 @@
     "baseUrl": "./"
   },
   "references": [
-    { "path": "../base-controller" },
-    { "path": "../permission-controller" }
+    {
+      "path": "../base-controller"
+    },
+    {
+      "path": "../controller-utils"
+    },
+    {
+      "path": "../permission-controller"
+    }
   ],
   "include": ["../../types", "./src"]
 }
