--- a/package.json
+++ b/package.json
@@ -47,16 +47,14 @@
     "eslint-plugin-jsdoc": "^36.1.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.4.1",
+    "execa": "^5.0.0",
     "isomorphic-fetch": "^3.0.0",
     "prettier": "^2.6.2",
     "prettier-plugin-packagejson": "^2.2.17",
     "rimraf": "^3.0.2",
     "simple-git-hooks": "^2.8.0",
-    "typescript": "~4.6.3"
-  },
-  "devDependencies": {
-    "execa": "^5.0.0",
     "ts-node": "^10.9.1",
+    "typescript": "~4.6.3",
     "which": "^3.0.0"
   },
   "packageManager": "yarn@3.2.1",
