--- a/packages/network-controller/package.json
+++ b/packages/network-controller/package.json
@@ -32,11 +32,13 @@
     "async-mutex": "^0.2.6",
     "babel-runtime": "^6.26.0",
     "eth-json-rpc-infura": "^5.1.0",
+    "eth-json-rpc-middleware": "^9.0.1",
     "eth-query": "^2.1.2",
     "immer": "^9.0.6",
     "web3-provider-engine": "^16.0.3"
   },
   "devDependencies": {
+    "@json-rpc-specification/meta-schema": "^1.0.6",
     "@metamask/auto-changelog": "^3.0.0",
     "@types/jest": "^26.0.22",
     "deepmerge": "^4.2.2",
