Add commit message filter for release check
A check has been added to the `is-release` job to ensure that the
commit message looks the way we expect it to. This acts as protection
against accidentally triggering the release workflow.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,8 +32,10 @@ jobs:
     outputs:
       IS_RELEASE: ${{ steps.is-release.outputs.IS_RELEASE }}
     steps:
-      - uses: MetaMask/action-is-release@v1
-        id: is-release
+      - id: is-release
+        uses: MetaMask/action-is-release@v1
+        with:
+          commit-starts-with: 'Release [version]'
 
   publish-release:
     name: Publish release
