--- a/.gitignore
+++ b/.gitignore
@@ -11,9 +11,9 @@ package-lock.json
 .eslintcache
 
 .DS_STORE
-coverage
-dist
-docs
+packages/*/coverage
+packages/*/dist
+packages/*/docs
 
 # yarn v3 (w/o zero-install)
 # See: https://yarnpkg.com/getting-started/qa#which-files-should-be-gitignored
@@ -26,4 +26,4 @@ docs
 !.yarn/versions
 
 # typescript
-*.tsbuildinfo
+packages/*/*.tsbuildinfo
