--- a/packages/network-controller/package.json
+++ b/packages/network-controller/package.json
@@ -31,15 +31,18 @@
   "dependencies": {
     "@metamask/base-controller": "workspace:^",
     "@metamask/controller-utils": "workspace:^",
+    "@metamask/eth-json-rpc-infura": "^8.0.0",
+    "@metamask/eth-json-rpc-middleware": "^11.0.0",
+    "@metamask/eth-json-rpc-provider": "^1.0.0",
     "@metamask/swappable-obj-proxy": "^2.1.0",
     "@metamask/utils": "^3.3.1",
     "async-mutex": "^0.2.6",
     "babel-runtime": "^6.26.0",
-    "eth-json-rpc-infura": "^5.1.0",
+    "eth-block-tracker": "^7.0.0",
     "eth-query": "^2.1.2",
     "immer": "^9.0.6",
-    "uuid": "^8.3.2",
-    "web3-provider-engine": "^16.0.3"
+    "json-rpc-engine": "^6.1.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@json-rpc-specification/meta-schema": "^1.0.6",
