--- a/packages/keyring-controller/package.json
+++ b/packages/keyring-controller/package.json
@@ -30,10 +30,10 @@
   },
   "dependencies": {
     "@keystonehq/metamask-airgapped-keyring": "^0.6.1",
-    "@metamask/base-controller": "workspace:~",
-    "@metamask/controller-utils": "workspace:~",
-    "@metamask/message-manager": "workspace:~",
-    "@metamask/preferences-controller": "workspace:~",
+    "@metamask/base-controller": "workspace:^",
+    "@metamask/controller-utils": "workspace:^",
+    "@metamask/message-manager": "workspace:^",
+    "@metamask/preferences-controller": "workspace:^",
     "async-mutex": "^0.2.6",
     "eth-keyring-controller": "^7.0.2",
     "eth-sig-util": "^3.0.0",
