--- a/packages/announcement-controller/package.json
+++ b/packages/announcement-controller/package.json
@@ -29,7 +29,7 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@metamask/base-controller": "workspace:~"
+    "@metamask/base-controller": "workspace:^"
   },
   "devDependencies": {
     "@metamask/auto-changelog": "^3.1.0",
