--- a/packages/gas-fee-controller/package.json
+++ b/packages/gas-fee-controller/package.json
@@ -29,9 +29,9 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@metamask/base-controller": "workspace:~",
-    "@metamask/controller-utils": "workspace:~",
-    "@metamask/network-controller": "workspace:~",
+    "@metamask/base-controller": "workspace:^",
+    "@metamask/controller-utils": "workspace:^",
+    "@metamask/network-controller": "workspace:^",
     "@types/uuid": "^8.3.0",
     "babel-runtime": "^6.26.0",
     "eth-query": "^2.1.2",
