--- a/packages/permission-controller/package.json
+++ b/packages/permission-controller/package.json
@@ -29,9 +29,9 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@metamask/approval-controller": "workspace:~",
-    "@metamask/base-controller": "workspace:~",
-    "@metamask/controller-utils": "workspace:~",
+    "@metamask/approval-controller": "workspace:^",
+    "@metamask/base-controller": "workspace:^",
+    "@metamask/controller-utils": "workspace:^",
     "@metamask/types": "^1.1.0",
     "@types/deep-freeze-strict": "^1.1.0",
     "deep-freeze-strict": "^1.1.1",
