--- a/packages/preferences-controller/package.json
+++ b/packages/preferences-controller/package.json
@@ -29,8 +29,8 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@metamask/base-controller": "workspace:~",
-    "@metamask/controller-utils": "workspace:~"
+    "@metamask/base-controller": "workspace:^",
+    "@metamask/controller-utils": "workspace:^"
   },
   "devDependencies": {
     "@metamask/auto-changelog": "^3.1.0",
