--- a/packages/subject-metadata-controller/package.json
+++ b/packages/subject-metadata-controller/package.json
@@ -29,14 +29,14 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@metamask/base-controller": "workspace:~",
-    "@metamask/permission-controller": "workspace:~",
+    "@metamask/base-controller": "workspace:^",
+    "@metamask/permission-controller": "workspace:^",
     "@metamask/types": "^1.1.0",
     "immer": "^9.0.6"
   },
   "devDependencies": {
     "@metamask/auto-changelog": "^3.1.0",
-    "@metamask/controller-utils": "workspace:~",
+    "@metamask/controller-utils": "workspace:^",
     "@types/jest": "^26.0.22",
     "deepmerge": "^4.2.2",
     "jest": "^26.4.2",
