--- a/packages/transaction-controller/package.json
+++ b/packages/transaction-controller/package.json
@@ -31,9 +31,9 @@
   "dependencies": {
     "@ethereumjs/common": "^2.3.1",
     "@ethereumjs/tx": "^3.2.1",
-    "@metamask/base-controller": "workspace:~",
-    "@metamask/controller-utils": "workspace:~",
-    "@metamask/network-controller": "workspace:~",
+    "@metamask/base-controller": "workspace:^",
+    "@metamask/controller-utils": "workspace:^",
+    "@metamask/network-controller": "workspace:^",
     "async-mutex": "^0.2.6",
     "babel-runtime": "^6.26.0",
     "eth-method-registry": "1.1.0",
