--- a/packages/assets-controllers/package.json
+++ b/packages/assets-controllers/package.json
@@ -65,6 +65,9 @@
     "typedoc-plugin-missing-exports": "^0.22.6",
     "typescript": "~4.6.3"
   },
+  "peerDependencies": {
+    "@metamask/network-controller": "workspace:^"
+  },
   "engines": {
     "node": ">=14.0.0"
   },
