--- a/packages/permission-controller/package.json
+++ b/packages/permission-controller/package.json
@@ -50,6 +50,9 @@
     "typedoc-plugin-missing-exports": "^0.22.6",
     "typescript": "~4.6.3"
   },
+  "peerDependencies": {
+    "@metamask/approval-controller": "workspace:^"
+  },
   "engines": {
     "node": ">=14.0.0"
   },
