--- a/packages/assets-controllers/package.json
+++ b/packages/assets-controllers/package.json
@@ -58,6 +58,7 @@
     "deepmerge": "^4.2.2",
     "ethjs-provider-http": "^0.1.6",
     "jest": "^26.4.2",
+    "jest-environment-jsdom": "^26.4.2",
     "nock": "^13.0.7",
     "sinon": "^9.2.4",
     "ts-jest": "^26.5.2",
