--- a/packages/address-book-controller/package.json
+++ b/packages/address-book-controller/package.json
@@ -29,11 +29,15 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@ethersproject/providers": "^5.7.0",
     "@metamask/base-controller": "workspace:^",
-    "@metamask/controller-utils": "workspace:^"
+    "@metamask/controller-utils": "workspace:^",
+    "@metamask/utils": "^3.3.1",
+    "immer": "^9.0.6"
   },
   "devDependencies": {
     "@metamask/auto-changelog": "^3.1.0",
+    "@metamask/preferences-controller": "workspace:^",
     "@types/jest": "^26.0.22",
     "deepmerge": "^4.2.2",
     "jest": "^26.4.2",
@@ -41,6 +45,9 @@
     "typedoc": "^0.22.15",
     "typedoc-plugin-missing-exports": "^0.22.6",
     "typescript": "~4.6.3"
+  },
+  "peerDependencies": {
+    "@metamask/preferences-controller": "workspace:^"
   },
   "engines": {
     "node": ">=14.0.0"
