--- a/packages/address-book-controller/tsconfig.build.json
+++ b/packages/address-book-controller/tsconfig.build.json
@@ -2,12 +2,20 @@
   "extends": "../../tsconfig.packages.build.json",
   "compilerOptions": {
     "baseUrl": "./",
+    "lib": ["ES2019", "DOM"],
     "outDir": "./dist",
     "rootDir": "./src"
   },
   "references": [
-    { "path": "../base-controller/tsconfig.build.json" },
-    { "path": "../controller-utils/tsconfig.build.json" }
+    {
+      "path": "../base-controller/tsconfig.build.json"
+    },
+    {
+      "path": "../controller-utils/tsconfig.build.json"
+    },
+    {
+      "path": "../preferences-controller/tsconfig.build.json"
+    }
   ],
   "include": ["../../types", "./src"]
 }
