--- a/packages/composable-controller/tsconfig.json
+++ b/packages/composable-controller/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "extends": "../../tsconfig.packages.json",
   "compilerOptions": {
-    "baseUrl": "./"
+    "baseUrl": "./",
+    "lib": ["ES2019", "DOM"]
   },
   "references": [
     {
