Integrate the ledger keyring into the KeyringController

--- a/packages/keyring-controller/package.json
+++ b/packages/keyring-controller/package.json
@@ -30,6 +30,8 @@
   },
   "dependencies": {
     "@keystonehq/metamask-airgapped-keyring": "^0.6.1",
+    "@ledgerhq/hw-transport": "^6.24.1",
+    "@ledgerhq/metamask-keyring": "0.3.1",
     "@metamask/base-controller": "workspace:^",
     "@metamask/controller-utils": "workspace:^",
     "@metamask/message-manager": "workspace:^",
