Rename this repository to `core`
We plan on incorporating libraries that are not controllers into this
monorepo, so the name "controllers" is not suitable. This repository
has been renamed to "core", which is already a name we've informally
been using for some time now.

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@metamask/controllers-monorepo",
+  "name": "@metamask/core-monorepo",
   "version": "38.0.0",
   "private": true,
-  "description": "Collection of platform-agnostic modules for creating secure data models for cryptocurrency wallets",
+  "description": "Monorepo for packages shared between MetaMask clients",
   "repository": {
     "type": "git",
-    "url": "https://github.com/MetaMask/controllers.git"
+    "url": "https://github.com/MetaMask/core.git"
   },
   "files": [],
   "workspaces": [
