--- a/packages/subject-metadata-controller/package.json
+++ b/packages/subject-metadata-controller/package.json
@@ -6,13 +6,13 @@
     "MetaMask",
     "Ethereum"
   ],
-  "homepage": "https://github.com/MetaMask/controllers/tree/main/packages/subject-metadata-controller#readme",
+  "homepage": "https://github.com/MetaMask/core/tree/main/packages/subject-metadata-controller#readme",
   "bugs": {
-    "url": "https://github.com/MetaMask/controllers/issues"
+    "url": "https://github.com/MetaMask/core/issues"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/MetaMask/controllers.git"
+    "url": "https://github.com/MetaMask/core.git"
   },
   "license": "MIT",
   "main": "./dist/index.js",
