--- a/.github/workflows/lint-build-test.yml
+++ b/.github/workflows/lint-build-test.yml
@@ -10,6 +10,8 @@ jobs:
     strategy:
       matrix:
         node-version: [14.x, 16.x]
+    outputs:
+      child-workspace-package-names: ${{ steps.workspace-package-names.outputs.child-workspace-package-names }}
     steps:
       - uses: actions/checkout@v3
       - name: Use Node.js ${{ matrix.node-version }}
@@ -18,6 +20,11 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: yarn
       - run: yarn --immutable
+      - name: Fetch workspace package names
+        id: workspace-package-names
+        run: |
+          echo "child-workspace-package-names=$(yarn child-workspace-package-names-as-json)" >> "$GITHUB_OUTPUT"
+        shell: bash
 
   lint:
     name: Lint
@@ -35,7 +42,31 @@ jobs:
           cache: yarn
       - run: yarn --immutable --immutable-cache
       - run: yarn lint
-      - run: yarn changelog:validate
+      - name: Require clean working directory
+        shell: bash
+        run: |
+          if ! git diff --exit-code; then
+            echo "Working tree dirty at end of job"
+            exit 1
+          fi
+
+  validate-changelog:
+    name: Validate changelog
+    runs-on: ubuntu-latest
+    needs: prepare
+    strategy:
+      matrix:
+        node-version: [14.x, 16.x]
+        package-name: ${{ fromJson(needs.prepare.outputs.child-workspace-package-names) }}
+    steps:
+      - uses: actions/checkout@v3
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: yarn
+      - run: yarn --immutable --immutable-cache
+      - run: yarn workspace ${{ matrix.package-name }} changelog:validate
       - name: Require clean working directory
         shell: bash
         run: |
@@ -75,6 +106,7 @@ jobs:
     strategy:
       matrix:
         node-version: [14.x, 16.x]
+        package-name: ${{ fromJson(needs.prepare.outputs.child-workspace-package-names) }}
     steps:
       - uses: actions/checkout@v3
       - name: Use Node.js ${{ matrix.node-version }}
@@ -83,7 +115,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: yarn
       - run: yarn --immutable --immutable-cache
-      - run: yarn test
+      - run: yarn workspace ${{ matrix.package-name }} run test
       - name: Require clean working directory
         shell: bash
         run: |
