Rewrite NetworkController unit tests
There are a few issues with the existing unit tests for
NetworkController:

* They aren't as comprehensive as they ought to be. While there are
tests for some essential behavior that the controller provides, there
are numerous code paths that the controller takes as it creates and
interacts with a provider, and the extent of these paths is not fully
tested.
* Also, it is difficult to tell what behavior is exactly is being
executed, as tests are flatly organized, and it would be more manageable
if tests were organized by method name.
* Finally, there are some tests which ends up running network requests
or out-of-band asynchronous code, and this must be properly stubbed.

Unfortunately, to properly address these issues, the unit tests needed
to be completely rewritten. In the course of doing this, type
definitions were added for `web3-provider-engine`, as this is helpful to
ensure that mocking `web3-provider-engine` behavior in tests is done
correctly.

Note that rewriting the tests uncovered several quirks with the existing
behavior. For instance:

* `lookupNetwork` makes an asynchronous network request, but is not an
asynchronous method itself. This means that some code could instantiate
a controller, use the controller to initialize a provider, then discard
the controller, and there is a chance that the request may complete out
of band. This actually happens in the tests because they run so fast,
so this is the only quirk I've gone ahead and fixed. To do this I've
added a `destroy` method to NetworkController and updated
`lookupNetwork` to do nothing if `destroy` has been called.
* `lookupNetwork` publishes an `NetworkController:providerConfigChange`
event via the controller messenger, even though this method never
changes the provider config.
* Based on the API, it appears that the provider config can be specified
two ways: ahead of time via the constructor and on the fly via the
`providerConfig` setter. Despite their apparent

--- a/packages/network-controller/tsconfig.json
+++ b/packages/network-controller/tsconfig.json
@@ -4,8 +4,12 @@
     "baseUrl": "./"
   },
   "references": [
-    { "path": "../base-controller" },
-    { "path": "../controller-utils" }
+    {
+      "path": "../base-controller"
+    },
+    {
+      "path": "../controller-utils"
+    }
   ],
-  "include": ["../../types", "./src"]
+  "include": ["../../types", "./src", "./tests"]
 }
