--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "simple-git-hooks": "^2.8.0",
     "ts-node": "^10.9.1",
     "typescript": "~4.6.3",
+    "web3-provider-engine": "^16.0.3",
     "which": "^3.0.0"
   },
   "packageManager": "yarn@3.3.0",
@@ -74,7 +75,11 @@
       "eth-sig-util>ethereumjs-util>secp256k1": true,
       "ethereumjs-util>ethereum-cryptography>keccak": true,
       "ethereumjs-util>ethereum-cryptography>secp256k1": true,
-      "simple-git-hooks": false
+      "simple-git-hooks": false,
+      "web3-provider-engine>@ethereumjs/tx>ethereumjs-util>ethereum-cryptography>keccak": false,
+      "web3-provider-engine>@ethereumjs/tx>ethereumjs-util>ethereum-cryptography>secp256k1": false,
+      "web3-provider-engine>ethereumjs-util>keccak": false,
+      "web3-provider-engine>ethereumjs-util>secp256k1": false
     }
   }
 }
