--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@lavamoat/allow-scripts": "^2.0.2",
     "@metamask/create-release-branch": "^1.0.1",
     "@metamask/eslint-config": "^11.0.1",
+    "@metamask/eslint-config-browser": "^11.1.0",
     "@metamask/eslint-config-jest": "^11.0.0",
     "@metamask/eslint-config-nodejs": "^11.0.1",
     "@metamask/eslint-config-typescript": "^11.0.0",
