--- a/packages/assets-controllers/package.json
+++ b/packages/assets-controllers/package.json
@@ -29,16 +29,17 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@ethersproject/abi": "^5.7.0",
     "@ethersproject/bignumber": "^5.7.0",
     "@ethersproject/contracts": "^5.7.0",
     "@ethersproject/providers": "^5.7.0",
+    "@metamask/abi-utils": "^1.1.0",
     "@metamask/base-controller": "workspace:^",
     "@metamask/contract-metadata": "^2.1.0",
     "@metamask/controller-utils": "workspace:^",
     "@metamask/metamask-eth-abis": "3.0.0",
     "@metamask/network-controller": "workspace:^",
     "@metamask/preferences-controller": "workspace:^",
+    "@metamask/utils": "^3.3.1",
     "@types/uuid": "^8.3.0",
     "abort-controller": "^3.0.0",
     "async-mutex": "^0.2.6",
@@ -58,6 +59,7 @@
     "deepmerge": "^4.2.2",
     "ethjs-provider-http": "^0.1.6",
     "jest": "^26.4.2",
+    "jest-environment-jsdom": "^26.4.2",
     "nock": "^13.0.7",
     "sinon": "^9.2.4",
     "ts-jest": "^26.5.2",
