--- a/packages/keyring-controller/package.json
+++ b/packages/keyring-controller/package.json
@@ -30,8 +30,10 @@
   },
   "dependencies": {
     "@keystonehq/metamask-airgapped-keyring": "^0.6.1",
-    "@ledgerhq/hw-transport": "^6.24.1",
-    "@ledgerhq/metamask-keyring": "0.3.1",
+    "@ledgerhq/cryptoassets": "7.1.0",
+    "@ledgerhq/hw-app-eth": "6.30.3",
+    "@ledgerhq/hw-transport": "^6.27.9",
+    "@ledgerhq/metamask-keyring": "0.3.2",
     "@metamask/base-controller": "workspace:^",
     "@metamask/controller-utils": "workspace:^",
     "@metamask/message-manager": "workspace:^",
