--- a/packages/network-controller/tsconfig.json
+++ b/packages/network-controller/tsconfig.json
@@ -1,11 +1,16 @@
 {
   "extends": "../../tsconfig.packages.json",
   "compilerOptions": {
-    "baseUrl": "./"
+    "baseUrl": "./",
+    "rootDir": "../.."
   },
   "references": [
-    { "path": "../base-controller" },
-    { "path": "../controller-utils" }
+    {
+      "path": "../base-controller"
+    },
+    {
+      "path": "../controller-utils"
+    }
   ],
-  "include": ["../../types", "./src"]
+  "include": ["../../types", "../../tests", "./src", "./tests"]
 }
