--- a/package.json
+++ b/package.json
@@ -79,7 +79,9 @@
       "web3-provider-engine>@ethereumjs/tx>ethereumjs-util>ethereum-cryptography>keccak": false,
       "web3-provider-engine>@ethereumjs/tx>ethereumjs-util>ethereum-cryptography>secp256k1": false,
       "web3-provider-engine>ethereumjs-util>keccak": false,
-      "web3-provider-engine>ethereumjs-util>secp256k1": false
+      "web3-provider-engine>ethereumjs-util>secp256k1": false,
+      "web3-provider-engine>ethereumjs-util>ethereum-cryptography>keccak": false,
+      "web3-provider-engine>ethereumjs-util>ethereum-cryptography>secp256k1": false
     }
   }
 }
