--- a/merged-packages/eth-json-rpc-provider/package.json
+++ b/merged-packages/eth-json-rpc-provider/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@metamask/module-template",
-  "version": "0.0.0",
-  "description": "The MetaMask Node module template.",
+  "name": "@metamask/eth-json-rpc-provider",
+  "version": "1.0.0",
+  "description": "Create an Ethereum provider using a JSON-RPC engine or middleware",
   "repository": {
     "type": "git",
-    "url": "https://github.com/MetaMask/metamask-module-template.git"
+    "url": "https://github.com/MetaMask/eth-json-rpc-provider.git"
   },
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
