Update `SafeEventEmitterProvider` type (#130)
* Update `SafeEventEmitterProvider` type

This package now uses the `SafeEventEmitterProvider` type from the
`eth-json-rpc-provider` package, rather than the equivalent provider
time previously exported from this package. The old provider type has
been removed.

The `withBlockTracker` test helper required more substantial updates to
remain compatible with this type. The old `FakeProvider` class was
replaced with a _real_ but empty provider that has its `sendAsync`
method stubbed out to behave identically to the `sendAsync` method on
`FakeProvider`. It should be equivalent.

* Remove unnecessary type casts

--- a/merged-packages/eth-block-tracker/package.json
+++ b/merged-packages/eth-block-tracker/package.json
@@ -25,6 +25,7 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@metamask/eth-json-rpc-provider": "^1.0.0",
     "@metamask/safe-event-emitter": "^2.0.0",
     "@metamask/utils": "^3.0.1",
     "json-rpc-random-id": "^1.0.1",
