NetworkController: provider -> getProviderAndBlockTracker (#1091)
This aligns NetworkController more closely with the extension,
which creates a proxy to the currently selected provider. This allows the
controller to maintain a persistent reference to a provider object even
if the network changes.

Co-authored-by: Elliot Winkler <elliot.winkler@gmail.com>

--- a/packages/network-controller/package.json
+++ b/packages/network-controller/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "@metamask/base-controller": "workspace:^",
     "@metamask/controller-utils": "workspace:^",
+    "@metamask/swappable-obj-proxy": "^2.1.0",
     "async-mutex": "^0.2.6",
     "babel-runtime": "^6.26.0",
     "eth-json-rpc-infura": "^5.1.0",
