--- a/packages/network-controller/package.json
+++ b/packages/network-controller/package.json
@@ -40,10 +40,14 @@
     "web3-provider-engine": "^16.0.3"
   },
   "devDependencies": {
+    "@json-rpc-specification/meta-schema": "^1.0.6",
     "@metamask/auto-changelog": "^3.1.0",
     "@types/jest": "^26.0.22",
+    "@types/lodash": "^4.14.191",
     "deepmerge": "^4.2.2",
     "jest": "^26.4.2",
+    "lodash": "^4.17.21",
+    "nock": "^13.0.7",
     "sinon": "^9.2.4",
     "ts-jest": "^26.5.2",
     "typedoc": "^0.22.15",
