--- a/packages/network-controller/package.json
+++ b/packages/network-controller/package.json
@@ -32,11 +32,13 @@
     "@metamask/base-controller": "workspace:^",
     "@metamask/controller-utils": "workspace:^",
     "@metamask/swappable-obj-proxy": "^2.1.0",
+    "@metamask/utils": "^5.0.0",
     "async-mutex": "^0.2.6",
     "babel-runtime": "^6.26.0",
     "eth-json-rpc-infura": "^5.1.0",
     "eth-query": "^2.1.2",
     "immer": "^9.0.6",
+    "uuid": "^9.0.0",
     "web3-provider-engine": "^16.0.3"
   },
   "devDependencies": {
