--- a/packages/controller-utils/package.json
+++ b/packages/controller-utils/package.json
@@ -30,7 +30,7 @@
   },
   "dependencies": {
     "@metamask/utils": "^3.3.1",
-    "@spruceid/siwe-parser": "^2.0.2",
+    "@spruceid/siwe-parser": "1.1.3",
     "eth-ens-namehash": "^2.0.8",
     "eth-rpc-errors": "^4.0.0",
     "ethereumjs-util": "^7.0.10",
