--- a/packages/controller-utils/package.json
+++ b/packages/controller-utils/package.json
@@ -29,6 +29,7 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@metamask/utils": "^3.3.1",
     "@spruceid/siwe-parser": "1.1.3",
     "eth-ens-namehash": "^2.0.8",
     "eth-rpc-errors": "^4.0.0",
