--- a/tsconfig.packages.build.json
+++ b/tsconfig.packages.build.json
@@ -2,6 +2,7 @@
   "extends": "./tsconfig.packages.json",
   "compilerOptions": {
     "declaration": true,
+    "declarationMap": true,
     "inlineSources": true,
     "sourceMap": true
   },
