Use `@metamask/rpc-errors` (#138)
* Bump rpc-errors

* Cast to Json

* Fix lint

* Rename args

--- a/merged-packages/json-rpc-engine/package.json
+++ b/merged-packages/json-rpc-engine/package.json
@@ -34,9 +34,9 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@metamask/rpc-errors": "^5.0.0",
     "@metamask/safe-event-emitter": "^2.0.0",
-    "@metamask/utils": "^5.0.1",
-    "eth-rpc-errors": "^4.0.2"
+    "@metamask/utils": "^5.0.1"
   },
   "devDependencies": {
     "@lavamoat/allow-scripts": "^2.3.0",
