--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
     "ts-node": "^10.9.1",
     "typescript": "~4.6.3",
     "web3-provider-engine": "^16.0.5",
-    "which": "^3.0.0"
+    "which": "^3.0.0",
+    "yargs": "^17.7.2"
   },
   "packageManager": "yarn@3.3.0",
   "engines": {
